[package]
name = "fortuna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
hex = "0.4.3"
miette = { version = "5.8.0", features = ["fancy"] }
naumachia = { git = "https://github.com/free-honey/naumachia.git" }
uplc = { git = "https://github.com/aiken-lang/aiken.git" }
rand = "0.8.5"
serde = "1.0.163"
serde_json = "1.0.96"
sha2 = "0.10.6"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
