[package]
name = "rust-miner"
version = "0.1.0"
edition = "2021"

[lib]
name = "fortuna"
path = "src/lib.rs"

[[bin]]
name = "fortuna_miner"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["sync", "macros"] }
