[package]
name = "tuna_cuda_miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cardano-multiplatform-lib = "3.1.3"
digest = "0.10.7"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.9.4"
reqwest = { version = "0.11.20", features=["blocking", "json"]}
serde = "1.0.188"
sha2 = "0.10.7"
sha256 = "1.4.0"
rustacuda = "0.1.3"
rustacuda_core = "0.1.2"
rustacuda_derive = "0.1.2"
arrayref = "0.3.7"